refactor: 重构 demo 页面导航

--- a/game/index.html
+++ b/game/index.html
@@ -341,25 +341,13 @@
                         <div class="hidden md:flex items-center space-x-1">
                             <a href="../index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
                                 <i class="fas fa-home text-blue-400"></i>
-                                <span class="text-white">游戏主页</span>
-                            </a>
-                            <a href="../world-lore.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
-                                <i class="fas fa-globe text-purple-400"></i>
-                                <span class="text-white">世界观</span>
-                            </a>
-                            <a href="../story/index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
-                                <i class="fas fa-book text-green-400"></i>
-                                <span class="text-white">故事剧情</span>
-                            </a>
-                            <a href="index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2 bg-gray-700/30">
-                                <i class="fas fa-gamepad text-yellow-400"></i>
-                                <span class="text-white">游戏原型</span>
+                                <span class="text-white">首页</span>
                             </a>
                             <a href="../terrain/index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
                                 <i class="fas fa-map text-orange-400"></i>
-                                <span class="text-white">地形图</span>
+                                <span class="text-white">地形</span>
                             </a>
-                            <a href="prototype-showcase.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                            <a href="prototype-showcase.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2 bg-gray-700/30">
                                 <i class="fas fa-th-large text-cyan-400"></i>
                                 <span class="text-white">原型展示</span>
                             </a>
@@ -375,12 +363,9 @@
                 <!-- 移动端菜单 -->
                 <div id="mobile-menu" class="hidden md:hidden bg-gray-800 border-t border-gray-700">
                     <div class="px-4 py-2 space-y-1">
-                        <a href="../index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">游戏主页</a>
-                        <a href="../world-lore.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">世界观</a>
-                        <a href="../story/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">故事剧情</a>
-                        <a href="index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition bg-gray-700 text-white">游戏原型</a>
-                        <a href="../terrain/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">地形图</a>
-                        <a href="prototype-showcase.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">原型展示</a>
+                        <a href="../index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">首页</a>
+                        <a href="../terrain/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition text-white">地形</a>
+                        <a href="prototype-showcase.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition bg-gray-700 text-white">原型展示</a>
                     </div>
                 </div>
             </nav>
