feat:增加概念设计文档

--- a/concept-design/index.html
+++ b/concept-design/index.html
@@ -285,6 +285,7 @@
                     <a href="#mechanics" class="text-gray-300 hover:text-white transition">核心机制</a>
                     <a href="#artstyle" class="text-gray-300 hover:text-white transition">艺术风格</a>
                     <a href="#world" class="text-gray-300 hover:text-white transition">世界观</a>
+                    <a href="#design-docs" class="text-gray-300 hover:text-white transition">设计文档</a>
                 </div>
             </div>
         </div>
@@ -550,6 +551,155 @@
                     </a>
                     <a href="../landpage/index.html" class="px-6 py-3 border border-white/20 rounded-lg font-semibold hover:bg-white/10 transition">
                         了解更多
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- 设计文档列表 -->
+        <section id="design-docs" class="mt-16 reveal">
+            <h3 class="font-orbitron text-4xl font-bold mb-8 text-center">设计文档库</h3>
+            
+            <!-- 核心设计文档 -->
+            <div class="mb-8">
+                <h4 class="text-xl font-bold mb-4 text-blue-400">核心设计</h4>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <a href="core-concept-analysis.md" class="concept-card rounded-lg p-4 hover:border-blue-400 transition">
+                        <h5 class="font-semibold mb-1">核心概念分析</h5>
+                        <p class="text-sm text-gray-400">游戏世界观、种族理念和核心机制分析</p>
+                    </a>
+                    <a href="concept-design-planning.md" class="concept-card rounded-lg p-4 hover:border-blue-400 transition">
+                        <h5 class="font-semibold mb-1">概念设计规划</h5>
+                        <p class="text-sm text-gray-400">10阶段设计工作流程和规划方案</p>
+                    </a>
+                    <a href="design-tech.md" class="concept-card rounded-lg p-4 hover:border-blue-400 transition">
+                        <h5 class="font-semibold mb-1">设计技术栈</h5>
+                        <p class="text-sm text-gray-400">开发技术选型和技术实现方案</p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- 建筑设计文档 -->
+            <div class="mb-8">
+                <h4 class="text-xl font-bold mb-4 text-green-400">建筑设计</h4>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <a href="building-design/building-analysis.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">建筑系统分析</h5>
+                        <p class="text-sm text-gray-400">现有建筑信息分析和设计方向</p>
+                    </a>
+                    <a href="building-design/circle-clan-buildings.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">圆环族建筑系统</h5>
+                        <p class="text-sm text-gray-400">和谐与循环的共鸣建筑体系</p>
+                    </a>
+                    <a href="building-design/triangle-council-buildings.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">三角议会建筑系统</h5>
+                        <p class="text-sm text-gray-400">力量与效率的三角结构体系</p>
+                    </a>
+                    <a href="building-design/square-covenant-buildings.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">方碑盟约建筑系统</h5>
+                        <p class="text-sm text-gray-400">秩序与规则的模块化体系</p>
+                    </a>
+                    <a href="building-design/spiral-progeny-buildings.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">螺旋之子建筑系统</h5>
+                        <p class="text-sm text-gray-400">变化与成长的有机建筑体系</p>
+                    </a>
+                    <a href="building-design/technical-specifications.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">技术规范文档</h5>
+                        <p class="text-sm text-gray-400">建筑技术标准和规范</p>
+                    </a>
+                    <a href="building-design/upgrade-system.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">升级系统设计</h5>
+                        <p class="text-sm text-gray-400">建筑升级和改造机制</p>
+                    </a>
+                    <a href="building-design/concept-art-requirements.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">概念艺术需求</h5>
+                        <p class="text-sm text-gray-400">建筑美术设计标准和要求</p>
+                    </a>
+                    <a href="building-design/audio-animation-specifications.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">音效动画规范</h5>
+                        <p class="text-sm text-gray-400">建筑视听效果设计规范</p>
+                    </a>
+                    <a href="building-design/balance-parameters.md" class="concept-card rounded-lg p-4 hover:border-green-400 transition">
+                        <h5 class="font-semibold mb-1">平衡性参数</h5>
+                        <p class="text-sm text-gray-400">建筑平衡性设计和测试标准</p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- 单位设计文档 -->
+            <div class="mb-8">
+                <h4 class="text-xl font-bold mb-4 text-purple-400">单位设计</h4>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <a href="unit-design/circle-clan-units.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">圆环族单位设计</h5>
+                        <p class="text-sm text-gray-400">和谐共鸣的战斗单位</p>
+                    </a>
+                    <a href="unit-design/triangle-council-units.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">三角议会单位设计</h5>
+                        <p class="text-sm text-gray-400">力量至上的攻击单位</p>
+                    </a>
+                    <a href="unit-design/square-covenant-units.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">方碑盟约单位设计</h5>
+                        <p class="text-sm text-gray-400">标准化的战术单位</p>
+                    </a>
+                    <a href="unit-design/spiral-progeny-units.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">螺旋之子单位设计</h5>
+                        <p class="text-sm text-gray-400">进化适应的生物单位</p>
+                    </a>
+                    <a href="unit-design/counter-relations.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">单位克制关系</h5>
+                        <p class="text-sm text-gray-400">单位间的平衡和克制机制</p>
+                    </a>
+                    <a href="unit-design/upgrade-evolution-system.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">升级进化系统</h5>
+                        <p class="text-sm text-gray-400">单位成长和进化机制</p>
+                    </a>
+                    <a href="unit-design/balance-parameters.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">单位平衡参数</h5>
+                        <p class="text-sm text-gray-400">单位属性平衡设计</p>
+                    </a>
+                    <a href="unit-design/concept-art-requirements.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">单位艺术需求</h5>
+                        <p class="text-sm text-gray-400">单位视觉设计标准</p>
+                    </a>
+                    <a href="unit-design/audio-voice-specifications.md" class="concept-card rounded-lg p-4 hover:border-purple-400 transition">
+                        <h5 class="font-semibold mb-1">单位音效语音</h5>
+                        <p class="text-sm text-gray-400">单位声音设计规范</p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- 机械设计文档 -->
+            <div class="mb-8">
+                <h4 class="text-xl font-bold mb-4 text-red-400">机械设计</h4>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <a href="mechanical-design/mechanical-equipment-analysis.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">机械装备分析</h5>
+                        <p class="text-sm text-gray-400">装备系统分析和设计</p>
+                    </a>
+                    <a href="mechanical-design/circle-clan-mechanical-system.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">圆环族机械系统</h5>
+                        <p class="text-sm text-gray-400">能量共鸣机械装备</p>
+                    </a>
+                    <a href="mechanical-design/triangle-council-mechanical-system.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">三角议会机械系统</h5>
+                        <p class="text-sm text-gray-400">力量强化机械装备</p>
+                    </a>
+                    <a href="mechanical-design/square-covenant-mechanical-system.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">方碑盟约机械系统</h5>
+                        <p class="text-sm text-gray-400">标准化模块装备</p>
+                    </a>
+                    <a href="mechanical-design/spiral-progeny-bio-mechanical-system.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">螺旋之子生物机械</h5>
+                        <p class="text-sm text-gray-400">有机融合机械系统</p>
+                    </a>
+                    <a href="mechanical-design/upgrade-modification-system.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">升级改造系统</h5>
+                        <p class="text-sm text-gray-400">机械装备升级机制</p>
+                    </a>
+                    <a href="mechanical-design/concept-art-requirements.md" class="concept-card rounded-lg p-4 hover:border-red-400 transition">
+                        <h5 class="font-semibold mb-1">机械艺术需求</h5>
+                        <p class="text-sm text-gray-400">装备视觉设计标准</p>
                     </a>
                 </div>
             </div>
