--- a/concept-design/index.html
+++ b/concept-design/index.html
@@ -596,6 +596,63 @@
             </div>
         </section>
 
+        <!-- 兵种系统展示 -->
+        <section class="mb-16 reveal">
+            <div class="concept-card rounded-2xl p-8">
+                <h3 class="font-orbitron text-3xl font-bold mb-6 text-center">兵种系统展示</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div>
+                        <h4 class="font-bold text-xl mb-4 text-green-400">四大种族兵种</h4>
+                        <p class="text-gray-400 mb-4">
+                            探索24个独特的兵种设计，每个都体现了其种族的战斗风格和特殊能力
+                        </p>
+                        <div class="space-y-3">
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-blue-500 flex items-center justify-center text-white font-bold">○</div>
+                                <span class="text-sm">圆环族 - 防御与能量控制兵种</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-red-500 flex items-center justify-center text-white font-bold">△</div>
+                                <span class="text-sm">三角议会 - 高攻击力突击兵种</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-green-500 flex items-center justify-center text-white font-bold">□</div>
+                                <span class="text-sm">方碑盟约 - 科技化标准化兵种</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-purple-500 flex items-center justify-center text-white font-bold">◎</div>
+                                <span class="text-sm">螺旋之子 - 有机进化兵种</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="font-bold text-xl mb-4 text-purple-400">兵种特色</h4>
+                        <ul class="space-y-2 text-gray-400 mb-6">
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>独特的3D建模和动画效果</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>丰富的技能系统和战术组合</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>进化和升级路径系统</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>种族协同作战机制</span>
+                            </li>
+                        </ul>
+                        <a href="unit-design/index.html" class="inline-block px-6 py-3 bg-gradient-to-r from-purple-500 to-pink-600 rounded-lg font-semibold hover:shadow-lg transform hover:scale-105 transition">
+                            查看全部兵种 →
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- CTA Section -->
         <section class="text-center reveal">
             <div class="concept-card rounded-2xl p-8 bg-gradient-to-br from-purple-900/20 to-blue-900/20">
