--- a/concept-design/index.html
+++ b/concept-design/index.html
@@ -653,6 +653,63 @@
             </div>
         </section>
 
+        <!-- 机械系统展示 -->
+        <section class="mb-16 reveal">
+            <div class="concept-card rounded-2xl p-8">
+                <h3 class="font-orbitron text-3xl font-bold mb-6 text-center">机械系统展示</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div>
+                        <h4 class="font-bold text-xl mb-4 text-green-400">四大种族机械</h4>
+                        <p class="text-gray-400 mb-4">
+                            探索24个独特的机械单位设计，每个都融合了几何美学与未来科技感
+                        </p>
+                        <div class="space-y-3">
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-blue-500 flex items-center justify-center text-white font-bold">○</div>
+                                <span class="text-sm">圆环族 - 能量护盾与和谐机械</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-red-500 flex items-center justify-center text-white font-bold">△</div>
+                                <span class="text-sm">三角议会 - 重火力突击机械</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-green-500 flex items-center justify-center text-white font-bold">□</div>
+                                <span class="text-sm">方碑盟约 - 防御与工程机械</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-8 h-8 rounded bg-purple-500 flex items-center justify-center text-white font-bold">◎</div>
+                                <span class="text-sm">螺旋之子 - 高机动与隐形机械</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="font-bold text-xl mb-4 text-purple-400">机械特色</h4>
+                        <ul class="space-y-2 text-gray-400 mb-6">
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>创新的几何变形机械设计</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>动态的3D模型展示与交互</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>种族专属的机械科技树</span>
+                            </li>
+                            <li class="flex items-start">
+                                <span class="mr-2">•</span>
+                                <span>战术性的机械配合系统</span>
+                            </li>
+                        </ul>
+                        <a href="mechanical-design/index.html" class="inline-block px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg font-semibold hover:shadow-lg transform hover:scale-105 transition">
+                            查看全部机械 →
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- CTA Section -->
         <section class="text-center reveal">
             <div class="concept-card rounded-2xl p-8 bg-gradient-to-br from-purple-900/20 to-blue-900/20">
