feat: 添加 ip 周边模块

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                         <i class="fas fa-lightbulb text-pink-400"></i>
                         <span>概念设计</span>
                     </a>
+                    <a href="ip-merchandise/index.html" class="nav-item px-3 py-2 rounded-md hover:bg-gray-700/50 transition flex items-center space-x-2">
+                        <i class="fas fa-shopping-bag text-purple-400"></i>
+                        <span>IP周边</span>
+                    </a>
 
                     <!-- 页内导航 -->
                     <div class="border-l border-gray-600 mx-2"></div>
@@ -190,6 +194,8 @@
                 <a href="story/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">故事剧情</a>
                 <a href="game/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">游戏原型</a>
                 <a href="terrain/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">地形图</a>
+                <a href="concept-design/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">概念设计</a>
+                <a href="ip-merchandise/index.html" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">IP周边</a>
                 <a href="#overview" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">游戏概览</a>
                 <a href="#factions" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">种族介绍</a>
                 <a href="#tech-tree" class="block px-3 py-2 rounded-md hover:bg-gray-700 transition">科技树</a>
