fix: 修复链接错误

--- a/game-modes/conquest-mode.html
+++ b/game-modes/conquest-mode.html
@@ -91,7 +91,7 @@
                             <i class="fas fa-home text-blue-400"></i>
                             <span>首页</span>
                         </a>
-                        <a href="index.html" class="nav-item px-3 py-2 rounded-md bg-gray-700/50 transition flex items-center space-x-2">
+                        <a href="../game-modes.html" class="nav-item px-3 py-2 rounded-md bg-gray-700/50 transition flex items-center space-x-2">
                             <i class="fas fa-gamepad text-purple-400"></i>
                             <span>游戏模式</span>
                         </a>
@@ -428,7 +428,7 @@
     <!-- Back to Game Modes -->
     <section class="py-16 px-4">
         <div class="text-center">
-            <a href="index.html" class="inline-flex items-center px-8 py-4 bg-gradient-to-r from-purple-500 to-blue-500 rounded-full font-semibold hover:scale-105 transform transition duration-300">
+            <a href="../game-modes.html" class="inline-flex items-center px-8 py-4 bg-gradient-to-r from-purple-500 to-blue-500 rounded-full font-semibold hover:scale-105 transform transition duration-300">
                 <i class="fas fa-arrow-left mr-3"></i>
                 返回游戏模式
             </a>
