--- a/game-modes/form-battle-mode.html
+++ b/game-modes/form-battle-mode.html
@@ -89,7 +89,7 @@
                         <a href="../index.html" class="hover:text-blue-400 transition">主页</a>
                         <a href="../game-design.html" class="hover:text-blue-400 transition">游戏设计</a>
                         <a href="../mechanical-design.html" class="hover:text-blue-400 transition">机械设计</a>
-                        <a href="#" class="text-blue-400">游戏模式</a>
+                        <a href="../game-modes.html" class="text-blue-400">游戏模式</a>
                         <a href="../ip-merchandise/index.html" class="hover:text-blue-400 transition">IP周边</a>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
             <a href="../index.html" class="block py-2 hover:text-blue-400">主页</a>
             <a href="../game-design.html" class="block py-2 hover:text-blue-400">游戏设计</a>
             <a href="../mechanical-design.html" class="block py-2 hover:text-blue-400">机械设计</a>
-            <a href="#" class="block py-2 text-blue-400">游戏模式</a>
+            <a href="../game-modes.html" class="block py-2 text-blue-400">游戏模式</a>
             <a href="../ip-merchandise/index.html" class="block py-2 hover:text-blue-400">IP周边</a>
         </div>
     </nav>
